# ecom-sdk

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/ecom_sdk/: __init__.py  ecom_sdk.py  models.py
tests/: test_ecom_sdk.py
