[tool.poetry]
name = "ecom_sdk"
version = "0.1.0"
description = "Python SDK for the ECOM HTTP API"
authors = ["Mahesh Yadav"]
license = "Proprietary"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
