[tool.poetry]
name = "ecom_sdk"
version = "0.1.0"
description = "Python SDK for the ECOM HTTP API"
authors = ["Mahesh Yadav"]
license = "Proprietary"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.8"
requests = "^2.32.2"
responses = "^0.25.0"
pydantic = "^2.7.1"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"
pytest-cov = "^5.0.0"
ruff = "^0.4.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
